--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>...</title>
+	<title>測試一下看看是否上傳成功</title>
 </head>
 <body>
 
